style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
/*---Media Queries --*/

@media (min-width: 993px) {
  .intro-text {
    font-size: 60px;
  }
  .project-container {
    display: grid;
    grid-template-columns: 40% 40%;
    grid-gap: 10px;
    justify-content: center;
  }
  .project-title {
    grid-column: 1 / span 2;
    text-align: center;
  }

}

@media (max-width: 992px) {
  .intro-text {
    font-size: 60px;
  }
  .project-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 5px 0px 5px 0px;
  }
  .project-title {
    text-align: center;
    margin: 10px 0px 0px 0px;
  }
  .project-image {
    margin: 10px 0px 0px 0px;
  }
  .project-info {
    margin: 10px 0px 0px 0px;
  }
}

@media (max-width: 768px) {
  .intro-text {
    font-size: 60px;
  }
}

@media (max-width: 576px) {
  .intro-text {
    font-size: 60px;
  }
}

@media (max-width: 400px) {
  .intro-text {
    font-size: 46px;
  }
}
/*--- Page Styles --*/
body {
  background-image: url("");
  background-color: lightgreen;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center; 
  background-size: auto 120vh;
}

.intro-container {
  height: 110vh;
  margin-top: -10vh;
  background-color: #959595
}
.logo-text-container {
  font-size: 24px;
}

.logo-text {
  font-size: 18pt;
  margin-bottom: 10pt
}

#project-section {
  margin-top: 15px;
  
}
.project-container {
  background-color: white;
}
.project-title {
  text-align: center;
}
.project-image-container {
  height: auto;
  padding: 10px 10px 10px 10px;
  text-align: center;
}
.project-image{
  display: inline-block;
}
.project-info-container {
  height: inherit;
  padding: 10px 10px 10px 10px;
}
.project-tech{
  text-align: center;
}
.project-links{
  text-align: center;
}

#footer {
  color: lightgray;
}

/*-- testing styles --*/

#test-1 {
  background: #959595;
}

#test-2 {
  background: #454545;
}

#test-3 {
  background: #cc8181;
}

#test-4 {
  background: #9ecc81;
}

/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

